Replaced place holding text

--- a/WikiGame.html
+++ b/WikiGame.html
@@ -25,19 +25,19 @@
     </header>
     <main>
         <section class="lower">
-          <img src="https://via.placeholder.com/300x150.png?text=Cookie+pic+1" alt="Wiki 1" />
+          <img src="https://via.placeholder.com/300x150.png?text=Wiki+pic+1" alt="Wiki 1" />
           <h2> How to play.</h2>
           <p>Text</p>
         </section>
   
         <section class="lower">
-          <img src="https://via.placeholder.com/300x150.png?text=Cookie+pic+2" alt="Wiki 2">
+          <img src="https://via.placeholder.com/300x150.png?text=Wiki+pic+2" alt="Wiki 2">
           <h2> Daily Leader Board</h2>
           <p>Text</p>
         </section>
   
          <section class="lower">
-          <img src="https://via.placeholder.com/300x150.png?text=Cookie+pic+3" alt="Wiki 3">
+          <img src="https://via.placeholder.com/300x150.png?text=Wiki+pic+3" alt="Wiki 3">
           <h2> Weekly Leader Board. </h2>
           <p>Text</p>
         </section>
