--- a/index.html
+++ b/index.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
-<head>
-    <title>The Wikipedia Game</title>
+<html>
+  <head>
+    <title>The Wiki Game</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  </head>
+
+  <body>
     <header>
-        <img src="https://placebear.com/640/360" alt=""/>
-        <nav>
-            <a href="https://mehtab228.github.io/Adventures-In-Seattle/">Adventures In Seattle</a>
-            <a href="">Link 2</a>
-            <a href="">Link 3</a>
-            <a href="">Link 4</a>
-            <a href="">Link 5</a>
-        </nav>
+      <img id="logo" alt="Wikigame Logo" src="Wiki Logo.png" >
+      <nav>
+        <ul>
+          <li><a href="https://mehtab228.github.io/Adventures-In-Seattle/">Adventures In Seattle</a></li>
+          <li><a href="/">Link 2</a></li>
+          <li><a href="/">Link 3</a></li>
+          <li><a href="/">Link 4</a></li>
+          <li><a href="/">Link 5</a></li>
+          </ul>
+      </nav>
+      <h1>The Wiki Game</h1>
+      <p>
+        The objective of this game is to get from the starting page the to the goal page. Hit the PLAY NOW button to start. From there you must keep click on the hyperlinks you think will get you closer to your goal page.
+      </p>
+    
     </header>
     <main>
-        <section>
-            <h1>The Wikipedia Game</h1>
-            <p>Description of how to play The Wikipedia Game</p>
+        <section class="lower">
+          <img src="Wiki Logo.png" alt="Wiki 1" />
+          <h2> How to play.</h2>
+          <p> </p>
         </section>
-        <section>
-        <img src="https://placebear.com/640/360" alt=""/>
-            <h2>GUI of Page</h2>
-            <ul>
-                <li>facts</li>
-                <li>facts</li>
-                <li>facts</li>
-            </ul>
+  
+        <section class="lower">
+          <img src="https://via.placeholder.com/300x150.png?text=Wiki+pic+2" alt="Wiki 2">
+          <h2> Daily Leader Board</h2>
+          <p>This is a leaderboard showing</p>
         </section>
-        <section>
-        <img src="https://placebear.com/640/360" alt=""/>
-            <h2>Day Leaders</h2>
-            <ul>
-                <li>facts</li>
-                <li>facts</li>
-                <li>facts</li>
-            </ul>
-        </section>
-        <section>
-        <img src="https://placebear.com/640/360" alt=""/>
-            <h2>Week Leaders</h2>
-            <ul>
-                <li>facts</li>
-                <li>facts</li>
-                <li>facts</li>
-            </ul>
+  
+         <section class="lower">
+          <img src="https://via.placeholder.com/300x150.png?text=Wiki+pic+3" alt="Wiki 3">
+          <h2> Weekly Leader Board. </h2>
+          <p>Text</p>
         </section>
     </main>
-    <footer>© Cianenry Danan Codefellows 102</footer>
-</body>
+
+    <footer>
+      <p>&copy; 2022 Cianenry Danan</p>
+    </footer>
+  </body>
+</html>
 
