--- a/index.html
+++ b/index.html
@@ -3,48 +3,54 @@
   <head>
     <title>The Wiki Game</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+    <style>
+    </style>
   </head>
-
   <body>
     <header>
-      <img id="logo" alt="Wikigame Logo" src="Wiki Logo.png" >
-      <nav>
+      <nav id="links">
         <ul>
-          <li><a href="https://mehtab228.github.io/Adventures-In-Seattle/">Adventures In Seattle</a></li>
+          <li></li>
+          <li><a href="/">Home</a></li>
           <li><a href="/">Link 2</a></li>
           <li><a href="/">Link 3</a></li>
-          <li><a href="/">Link 4</a></li>
-          <li><a href="/">Link 5</a></li>
-          </ul>
+          <li><a href="/">Chris</a></li>
+          <li><a href="https://mehtab228.github.io/Adventures-In-Seattle/">Mehtab</a></li>
+        </ul>
       </nav>
-      <h1>The Wiki Game</h1>
-      <p>
+      <h1 class="head">The Wiki Game</h1>
+      <p class="textblock">
         The objective of this game is to get from the starting page the to the goal page. Hit the PLAY NOW button to start. From there you must keep click on the hyperlinks you think will get you closer to your goal page.
       </p>
-    
     </header>
     <main>
-        <section class="lower">
-          <img src="Wiki Logo.png" alt="Wiki 1" />
-          <h2> How to play.</h2>
-          <p> </p>
-        </section>
-  
-        <section class="lower">
-          <img src="https://via.placeholder.com/300x150.png?text=Wiki+pic+2" alt="Wiki 2">
-          <h2> Daily Leader Board</h2>
-          <p>This is a leaderboard showing</p>
-        </section>
-  
-         <section class="lower">
-          <img src="https://via.placeholder.com/300x150.png?text=Wiki+pic+3" alt="Wiki 3">
-          <h2> Weekly Leader Board. </h2>
-          <p>Text</p>
-        </section>
+      <div class="row">
+        <div class="column">
+          <section class="block">
+            <img src="./Images/Play.png" class="pic" alt="Wiki 1" />
+            <h2 class="head"> How to Play</h2>
+            <p class="textblock">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <section/>
+        </div>
+        <div class="column">
+          <section class="block">
+            <img src="./Images/Play.png" class="pic" alt="Wiki 1" />
+            <h2 class="head"> How to Play</h2>
+            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <section/>
+        </div>
+        <div class="column">
+          <section class="block">
+            <img src="./Images/Play.png" class="pic" alt="Wiki 1" />
+            <h2 class="head"> How to Play</h2>
+            <p class="textblock">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <section/>
+        </div>
+      </div>
     </main>
-
     <footer>
-      <p>&copy; 2022 Cianenry Danan</p>
+      <p id="foot">&copy; 2022 Cianenry Danan</p>
     </footer>
   </body>
 </html>
