Added styling and JS

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>The Wiki Game</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-    <style>
-    </style>
+    <center>
+      <title>How to Play The Wiki Game</title>
+      <link rel="stylesheet" href="style.css" >
   </head>
   <body>
-    <header>
+    <header class = "static" class ="topbar">
       <nav id="links">
         <ul>
-          <li></li>
+          <center>
+          <li><img alt="Wikigame Logo" src="./Images/WikiLogo.png" class="logo"></li>
           <li><a href="/">Home</a></li>
           <li><a href="/">Link 2</a></li>
           <li><a href="/">Link 3</a></li>
@@ -19,39 +18,46 @@
           <li><a href="https://mehtab228.github.io/Adventures-In-Seattle/">Mehtab</a></li>
         </ul>
       </nav>
-      <h1 class="head">The Wiki Game</h1>
-      <p class="textblock">
-        The objective of this game is to get from the starting page the to the goal page. Hit the PLAY NOW button to start. From there you must keep click on the hyperlinks you think will get you closer to your goal page.
-      </p>
     </header>
+    <script src="myscripts.js"></script>
     <main>
+      <section>
+        <h1 id="head">THE WIKIPEDIA GAME</h1>
+        <p id="head">A free instruction guide</p>
+        <p class="textblock">
+          The objective of this game is to get from the starting page the to the goal page. Hit the PLAY NOW button to start. From there you must keep click on the hyperlinks you think will get you closer to your goal page.
+        </p>
+      </section>
+      <script src="script.js"></script>
       <div class="row">
         <div class="column">
-          <section class="block">
-            <img src="./Images/Play.png" class="pic" alt="Wiki 1" />
+          <section>
             <h2 class="head"> How to Play</h2>
-            <p class="textblock">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-          <section/>
-        </div>
-        <div class="column">
-          <section class="block">
             <img src="./Images/Play.png" class="pic" alt="Wiki 1" />
-            <h2 class="head"> How to Play</h2>
             <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
           <section/>
         </div>
-        <div class="column">
-          <section class="block">
-            <img src="./Images/Play.png" class="pic" alt="Wiki 1" />
+          <div class="column">
+            <section>
+              <h2 class="head"> How to Play</h2>
+              <img src="./Images/Play.png" class="pic" alt="Wiki 1" />
+              <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+            <section/>
+          </div>
+         <div class="column">
+          <section>
             <h2 class="head"> How to Play</h2>
-            <p class="textblock">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-          <section/>
+            <img src="./Images/Play.png" class="pic" alt="Wiki 1" />
+            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+            <section/>
+          </div>
         </div>
-      </div>
-    </main>
-    <footer>
-      <p id="foot">&copy; 2022 Cianenry Danan</p>
-    </footer>
+      </main>
+
+    </center>
+      <footer>
+        <p id="foot">&copy; 2022 Cianenry Danan</p>
+      </footer>
   </body>
 </html>
 
