added dynamic inputs, if else conditional logic, fucntions, answerable questions.

--- a/index2.html
+++ b/index2.html
@@ -2,12 +2,11 @@
 <html>
   <head>
     <center>
-      <title>Pranked</title>
+      <title>git prenkt</title>
       <link rel="stylesheet" href="style.css">
-      <script src="script.js"></script>
   </head>
   <body>
     <header>
-        <h1>GET. PRANKED.</h1>
+        <h1 id ="gud">git gud</h1>
     </header>
   </body>
