--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 
   <head>
-    <center>
       <title>How to Play The Wiki Game</title>
       <link rel="stylesheet" href="style.css">
       <script src="script.js"></script>
@@ -14,14 +13,13 @@
         <img alt="Wikigame Logo" src="./Images/WikiLogo.png" id="logo">
         <a href="https://cianedanan.github.io/First-Wireframed-Webpage/">Home</a>
         <a href="https://www.thewikigame.com/" target="_blank">Play</a>
-        <a href="">Cheats</a></li>
+        <a href="index2.html" target="_blank">Tips</a>
         <a href="https://hollistr.github.io/Sugarshack-Sessions" target="_blank">Chris</a>
         <a href="https://mehtab228.github.io/Adventures-In-Seattle/" target="_blank">Mehtab</a>
       </nav>
     </header>
 
     <main>
-
       <section>
         <h1 id="head">THE WIKIPEDIA GAME</h1>
         <p id="head">A free instruction guide</p>
@@ -35,28 +33,39 @@
         <img src="Images/how-to-pic.png"/ class="picTop" alt="How To IMG">
       </section>
       
-      <section class ="border">
+    <section class ="border">
       <div class="row">
         <div class="column">
             <h2 class="smallhead"> Daily Leaderboard</h2>
-            <img src="Images/DailyLeaderboard.png" class="pic" alt="Wiki 2" />
+            <img src="Images/DailyLeaderboard.png" class="pic" alt="Wiki 2"/>
             <p class= "blocktext">This leaderboard shows who has the most points today.</p>
         </div>
         <div class="column">
             <h2 class="smallhead"> Latest Winner</h2>
-            <img src="Images/Winner.png" class="pic" alt="Wiki 1" />
+            <img src="Images/Winner.png" class="pic" alt="Wiki 1"/>
             <p class= "blocktext">You can see who did the last challenge the quickest. On display is how many times they've reached the endpage, which hyperlinks they clicked get there, how many points they earned for each win, how many clicks it took, and the time it took.</p>
         </div>
          <div class="column">
             <h2 class="smallhead"> Weekly Leaderboard</h2>
-            <img src="Images/WeeklyLeaderboard.png" class="pic" alt="Wiki 3" />
+            <img src="Images/WeeklyLeaderboard.png" class="pic" alt="Wiki 3"/>
             <p class= "blocktext">This leaderboard shows who has the most points this week.</p>
           </div>
-        </div>
+       </div>
       </section>
 
-      </main>
-    </center>
+      <section class ="border">
+        <script>askQuestion()</script>
+        <h2 class = "smallhead">Rank Checker</h2>
+        <p class= "blocktext">Hey, <script>getName()</script>! Wanna know your rank?<p>
+        <p class= "blocktext" id="printHere"></p>
+        <input placeholder = "Enter Score" id="userPoints"></input><button onclick="giveRank('rank');">Check Rank</button>
+        <br>
+        <br> 
+        <button onclick="printImg()">Wins</button>
+        <p id="trophyHere"></p>
+      </section>3
+
+    </main>
       <footer>
         <p id="foot">&copy; 2022 Cianenry Danan</p>
       </footer>
