Got rid of the random floating 3.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <br> 
         <button onclick="printImg()">Wins</button>
         <p id="trophyHere"></p>
-      </section>3
+      </section>
 
     </main>
       <footer>
